# notifyMe

./: .gitignore  README.md  algorithm.py  database.py  email_util.py  main.py  pyproject.toml  utils.py  web.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
